group 'com.thomas15v'
version '1.4'

apply plugin: 'java'
apply plugin: 'maven'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

configurations {
    provided
}

sourceSets {
    main {
        compileClasspath += configurations.provided
    }
}

dependencies {
    testCompile 'junit:junit:4.11'
    compile 'com.google.code.gson:gson:2.2.4'
    compile 'commons-io:commons-io:2.4'
    compile gradleApi()
}

uploadArchives {
    repositories {
        mavenDeployer {
            repository(url: uri('.repo'))
        }
        /*
        if (project.hasProperty('qixaliteRepoUsername')){
            mavenDeployer {
                repository(url: 'http://repo.qixalite.com/content/repositories/public_releases/') {
                    authentication(userName: qixaliteRepoUsername, password: qixaliteRepoPassword)
                }
                snapshotRepository(url: 'http://repo.qixalite.com/content/repositories/public_snapshots') {
                    authentication(userName: qixaliteRepoUsername, password: qixaliteRepoPassword)
                }
>>>>>>> a3686f7... Got it finally working again, only issue is priority
            }
        }*/
    }
}
